--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -527,7 +527,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x124a83630>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1251f0e48>"
       ]
      },
      "execution_count": 12,
@@ -633,7 +633,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x124ba21d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1253406a0>"
       ]
      },
      "execution_count": 17,
@@ -665,7 +665,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x124eac5c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x124d3ce10>"
       ]
      },
      "execution_count": 18,
@@ -692,16 +692,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1281fdac8>"
+       "<matplotlib.legend.Legend at 0x12575a780>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,32 +779,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x12b136dd8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12aeccfd0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12b4d1748>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12af11780>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1257c39b0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12579fc18>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12a24de80>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12a2ce0f0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x12a2ce160>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12ad145f8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12ad3c860>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12ad64ac8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x12ad8dd30>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12adb9f98>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12b140240>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12b1684a8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x109e24828>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128a3b908>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125bb9ba8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12899ee10>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1289d3fd0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128a52320>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128a83668>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128ab39b0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x128ab3a20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128b25128>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128b574a8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128b88828>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x128bbaba8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128beef28>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128c2c2e8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128c5e668>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -830,16 +830,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12bc908d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1257398d0>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -864,13 +864,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# clear/revert data set\n",
     "housing = strat_train_set.drop(\"median_house_value\", axis =1)\n",
     "housing_labels = strat_train_set[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SimpleImputer(strategy='median')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Data Cleaning\n",
+    "# 1. get rid of the corresponding districts\n",
+    "# housing.dropna(subset=[\"total_bedrooms\"])\n",
+    "# 2. get rid of the whole attribute\n",
+    "#  housing.drop(\"total_bedrooms\", axis=1)\n",
+    "# 3.set missing value to a fixed one (mean, median, min, max)\n",
+    "# median = housing[\"total_bedrooms\"].median()\n",
+    "# housing[\"total_bedrooms\"].fillna(mdian, inplace=True)\n",
+    "\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "housing_num = housing.drop(\"ocean_proximity\", axis=1)\n",
+    "imputer.fit(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer.statistics_\n",
+    "housing_num.median().values\n",
+    "X = imputer.transform(housing_num)\n",
+    "housing_tr = pd.DataFrame(X, columns=housing_num.columns, index = housing_num.index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<16512x5 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 16512 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# handle categorical data\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "housing_cat = housing[[\"ocean_proximity\"]]\n",
+    "cat_endcoder = OneHotEncoder()\n",
+    "housing_cat_1hot = cat_endcoder.fit_transform(housing_cat)\n",
+    "housing_cat_1hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat_1hot.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['<1H OCEAN', 'INLAND', 'ISLAND', 'NEAR BAY', 'NEAR OCEAN'],\n",
+       "       dtype=object)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_endcoder.categories_"
    ]
   }
  ],
