--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -527,7 +527,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1251f0e48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x122091e10>"
       ]
      },
      "execution_count": 12,
@@ -633,7 +633,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1253406a0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12226ee48>"
       ]
      },
      "execution_count": 17,
@@ -665,7 +665,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x124d3ce10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1224b6f98>"
       ]
      },
      "execution_count": 18,
@@ -698,7 +698,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12575a780>"
+       "<matplotlib.legend.Legend at 0x122693e48>"
       ]
      },
      "execution_count": 19,
@@ -785,22 +785,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x109e24828>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128a3b908>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125bb9ba8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12899ee10>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1289d3fd0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128a52320>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128a83668>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128ab39b0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x128ab3a20>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128b25128>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128b574a8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128b88828>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x128bbaba8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128beef28>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128c2c2e8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x128c5e668>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x10538c198>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1229ea9b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12584eba8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125880e10>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1258c00b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1258f1518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125924898>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125955be0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x125955c50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1259c6358>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1259f76d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125a29a58>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x125a5cdd8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125a9b198>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125ace518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x125b00898>]],\n",
        "      dtype=object)"
       ]
      },
@@ -836,7 +836,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1257398d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x123094a20>"
       ]
      },
      "execution_count": 24,
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "\twith 16512 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
        "       [0., 0., 0., 1., 0.]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -981,13 +981,323 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cat_endcoder.categories_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "# get the right column indices: safer than hard-coding indices 3, 4, 5, 6\n",
+    "rooms_ix, bedrooms_ix, population_ix, household_ix = [\n",
+    "    list(housing.columns).index(col)\n",
+    "    for col in (\"total_rooms\", \"total_bedrooms\", \"population\", \"households\")]\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room = True): # no *args or **kargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self  # nothing else to do\n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, population_per_household,\n",
+    "                         bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "      <th>rooms_per_household</th>\n",
+       "      <th>population_per_household</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17606</th>\n",
+       "      <td>-121.89</td>\n",
+       "      <td>37.29</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1568</td>\n",
+       "      <td>351</td>\n",
+       "      <td>710</td>\n",
+       "      <td>339</td>\n",
+       "      <td>2.7042</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.62537</td>\n",
+       "      <td>2.0944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18632</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>37.05</td>\n",
+       "      <td>14</td>\n",
+       "      <td>679</td>\n",
+       "      <td>108</td>\n",
+       "      <td>306</td>\n",
+       "      <td>113</td>\n",
+       "      <td>6.4214</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>6.00885</td>\n",
+       "      <td>2.70796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14650</th>\n",
+       "      <td>-117.2</td>\n",
+       "      <td>32.77</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1952</td>\n",
+       "      <td>471</td>\n",
+       "      <td>936</td>\n",
+       "      <td>462</td>\n",
+       "      <td>2.8621</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "      <td>4.22511</td>\n",
+       "      <td>2.02597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3230</th>\n",
+       "      <td>-119.61</td>\n",
+       "      <td>36.31</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1847</td>\n",
+       "      <td>371</td>\n",
+       "      <td>1460</td>\n",
+       "      <td>353</td>\n",
+       "      <td>1.8839</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>5.23229</td>\n",
+       "      <td>4.13598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3555</th>\n",
+       "      <td>-118.59</td>\n",
+       "      <td>34.23</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6592</td>\n",
+       "      <td>1525</td>\n",
+       "      <td>4459</td>\n",
+       "      <td>1463</td>\n",
+       "      <td>3.0347</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.50581</td>\n",
+       "      <td>3.04785</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      longitude latitude housing_median_age total_rooms total_bedrooms  \\\n",
+       "17606   -121.89    37.29                 38        1568            351   \n",
+       "18632   -121.93    37.05                 14         679            108   \n",
+       "14650    -117.2    32.77                 31        1952            471   \n",
+       "3230    -119.61    36.31                 25        1847            371   \n",
+       "3555    -118.59    34.23                 17        6592           1525   \n",
+       "\n",
+       "      population households median_income ocean_proximity rooms_per_household  \\\n",
+       "17606        710        339        2.7042       <1H OCEAN             4.62537   \n",
+       "18632        306        113        6.4214       <1H OCEAN             6.00885   \n",
+       "14650        936        462        2.8621      NEAR OCEAN             4.22511   \n",
+       "3230        1460        353        1.8839          INLAND             5.23229   \n",
+       "3555        4459       1463        3.0347       <1H OCEAN             4.50581   \n",
+       "\n",
+       "      population_per_household  \n",
+       "17606                   2.0944  \n",
+       "18632                  2.70796  \n",
+       "14650                  2.02597  \n",
+       "3230                   4.13598  \n",
+       "3555                   3.04785  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "\n",
+    "def add_extra_features(X, add_bedrooms_per_room=True):\n",
+    "    rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "    population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "    if add_bedrooms_per_room:\n",
+    "        bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "        return np.c_[X, rooms_per_household, population_per_household,\n",
+    "                     bedrooms_per_room]\n",
+    "    else:\n",
+    "        return np.c_[X, rooms_per_household, population_per_household]\n",
+    "\n",
+    "attr_adder = FunctionTransformer(add_extra_features, validate=False,\n",
+    "                                 kw_args={\"add_bedrooms_per_room\": False})\n",
+    "housing_extra_attribs = attr_adder.fit_transform(housing.values)\n",
+    "\n",
+    "housing_extra_attribs = pd.DataFrame(\n",
+    "    housing_extra_attribs,\n",
+    "    columns=list(housing.columns)+[\"rooms_per_household\", \"population_per_household\"],\n",
+    "    index=housing.index)\n",
+    "housing_extra_attribs.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "    ('attribs_adder', CombinedAttributesAdder()),\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine number and categorical transformers into a single piepleine\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "num_attributes = list(housing_num)\n",
+    "cat_attributes = ['ocean_proximity']\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "    ('num', num_pipeline, num_attributes),\n",
+    "    ('cat', OneHotEncoder(), cat_attributes)\n",
+    "])\n",
+    "\n",
+    "housing_prepared = full_pipeline.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select a trainning model\n",
+    "# navie linear model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: [210644.60459286 317768.80697211 210956.43331178  59218.98886849\n",
+      " 189747.55849879]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's try the full preprocessing pipeline on a few training instances\n",
+    "some_data = housing.iloc[:5]\n",
+    "some_labels = housing_labels.iloc[:5]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "\n",
+    "print(\"Predictions:\", lin_reg.predict(some_data_prepared))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68628.19819848922"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mearue erorr\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "lin_rmse"
    ]
   }
  ],
